[package]
name = "rkmod"
description = "kmod library in Rust"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]
default = ["compression-all", "file-mmap", "cache-intern", "module-load", "current-kernel"]
file-mmap = ["dep:memmap2"]
cache-intern = ["dep:dashmap"]
compression-all = ["compression-gzip", "compression-xz2", "compression-zlib", "compression-zstd"]
compression-gzip = ["dep:flate2", "compression-used"]
compression-used = []
compression-xz2 = ["dep:xz2", "compression-used"]
compression-zstd = ["dep:zstd", "compression-used"]
compression-zlib = ["dep:flate2", "compression-used"]
module-load = ["dep:nix"]
current-kernel = ["dep:libc"]

[dependencies]
bstr = "1.11.3"
bytes = "1.9.0"
dashmap = { version = "6.1.0", optional = true }
elf = "0.7.4"
flate2 = {  version = "1.0.35", optional = true }
indexmap = "2.7.0"
libc = { version = "0.2.169", optional = true }
memmap2 = { version = "0.9.5", optional = true }
nix = { version = "0.29.0", features = ["kmod"], optional = true }
thiserror = "2.0.9"
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
easy-parallel = "3.3.1"

[lib]
name = "rkmod"

[[bin]]
name = "insmod"
path = "bin/insmod.rs"
required-features = ["module-load"]
