[package]
name = "rkmod"
description = "kmod library in Rust"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default = ["compression-all", "file-mmap", "cache-intern", "module-manager", "current-kernel"]
cache-intern = ["dep:dashmap"]
compression-all = ["compression-gzip", "compression-xz2", "compression-zlib", "compression-zstd"]
compression-core = []
compression-gzip = ["dep:flate2", "compression-core"]
compression-xz2 = ["dep:xz2", "compression-core"]
compression-zlib = ["dep:flate2", "compression-core"]
compression-zstd = ["dep:zstd", "compression-core"]
current-kernel = ["dep:libc"]
file-mmap = ["dep:memmap2"]
module-manager = ["dep:nix"]

[dependencies]
bstr = "1.12.0"
bytes = "1.10.1"
dashmap = { version = "6.1.0", optional = true }
elf = "0.8.0"
flate2 = {  version = "1.1.2", features = ["zlib-rs"], optional = true }
indexmap = "2.10.0"
libc = { version = "0.2.175", optional = true }
memmap2 = { version = "0.9.7", optional = true }
nix = { version = "0.30.1", features = ["kmod"], optional = true }
thiserror = "2.0.14"
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
easy-parallel = "3.3.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0

[lib]
name = "rkmod"

[[bin]]
name = "insmod"
path = "bin/insmod.rs"
required-features = ["module-manager"]
