[package]
name = "rkmod"
description = "kmod library in Rust"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "cache-intern",
    "compression-all",
    "current-kernel",
    "database",
    "elf",
    "file-mmap",
    "module-manager",
    "signature-all",
]
cache-intern = [
    "dep:dashmap",
]
compression-all = [
    "compression-gzip",
    "compression-xz2",
    "compression-zlib",
    "compression-zstd",
]
compression-core = []
compression-gzip = [
    "compression-core",
    "dep:flate2",
]
compression-xz2 = [
    "compression-core",
    "dep:xz2",
]
compression-zlib = [
    "compression-core",
    "dep:flate2",
]
compression-zstd = [
    "compression-core",
    "dep:zstd",
]
controller = []
current-kernel = [
    "dep:libc",
]
database = []
elf = [
    "dep:elf",
]
file-mmap = [
    "dep:memmap2",
]
module-manager = [
    "controller",
    "database",
    "dep:nix",
]
signature-all = [
    "signature-core",
    "signature-pkcs7",
]
signature-core = [
    "dep:bytemuck",
]
signature-pkcs7 = [
    "dep:cms",
    "signature-core",
]

[dependencies.bstr]
version = "1.12.1"

[dependencies.bytemuck]
version = "1.25.0"
features = ["derive"]
optional = true

[dependencies.bytes]
version = "1.11.0"

[dependencies.cms]
version = "0.2.3"
optional = true

[dependencies.dashmap]
version = "6.1.0"
optional = true

[dependencies.elf]
version = "0.8.0"
optional = true

[dependencies.flate2]
version = "1.1.8"
features = ["zlib-rs"]
optional = true

[dependencies.indexmap]
version = "2.13.0"

[dependencies.libc]
version = "0.2.180"
optional = true

[dependencies.memmap2]
version = "0.9.9"
optional = true

[dependencies.nix]
version = "0.31.1"
features = ["kmod"]
optional = true

[dependencies.thiserror]
version = "2.0.18"

[dependencies.xz2]
version = "0.1.7"
optional = true

[dependencies.zstd]
version = "0.13.3"
optional = true

[dev-dependencies]
easy-parallel = "3.3.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0

[lib]
name = "rkmod"

[[bin]]
name = "insmod"
path = "bin/insmod.rs"
required-features = ["module-manager"]

[[example]]
name = "current"
path = "examples/current.rs"
required-features = ["current-kernel", "module-manager"]

[[example]]
name = "database"
path = "examples/database.rs"
required-features = ["database"]

[[example]]
name = "directory"
path = "examples/directory.rs"
required-features = ["database"]

[[example]]
name = "probe"
path = "examples/probe.rs"
required-features = ["current-kernel", "module-manager"]

[[example]]
name = "readall"
path = "examples/readall.rs"
required-features = ["database", "elf"]

[[example]]
name = "readelf"
path = "examples/readelf.rs"
required-features = ["elf"]

[[example]]
name = "readko"
path = "examples/readko.rs"
required-features = ["elf", "signature-all"]

[[example]]
name = "resolve"
path = "examples/resolve.rs"
required-features = ["database"]
